--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&family=Press+Start+2P&display=swap');
 *{
     font-family: 'Raleway', sans-serif;
-}
-h1{
-    font-size: 2.8vh;
-}
-h2{
-    font-size: 2vh;
-}
-h3{
-    font-size: 1.5vh;
-}
-p{
-    font-size: 1.5vh;
 }
 a{
     text-decoration-line: none;
     color: black;
 }
+.infoname, .date{
+    font-family: 'Press Start 2P', cursive;
+}
 @media(min-width: 426px){
+    h1{
+        font-size: 2.8vh;
+    }
+    h2{
+        font-size: 2vh;
+    }
+    h3{
+        font-size: 1.5vh;
+    }
+    p{
+        font-size: 1.5vh;
+    }
     body{
         margin: 0 auto;
         background-image: url("img/black-background-star.jpg");
@@ -44,7 +47,7 @@ a{
         text-align: center;
         background: red;
     }
-    .content{
+    #content{
         padding: 0.5vh;
         background: pink;
     }
@@ -53,20 +56,139 @@ a{
         grid-column: 1/ span 2;
         background: yellow;
     }
+    button, input{
+        font-size: 1.6vh;
+        height: auto;
+    }
+    #firstpage{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 32vh 1fr;
+        text-align: center;
+        grid-gap: 0.2vh;
+    }
+    .imgfirstpage{
+        grid-column: 1/ span 2;
+        background: white;
+    }
+    .btfirstpage1{
+        background: red;
+    }
+    .btfirstpage2{
+        background: green;
+    }
+    #form{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 5vh;
+        grid-gap: 0.2vh;
+        background: brown;
+    }
+    .loginheader{
+        font-size: 4vh;
+        text-align: center;
+        padding: 1vh;
+        color: white;
+    }
+    .text{
+        grid-column: span 2;
+    }
+    #blogpage{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 20vh 6vh 1fr 25vh 6vh;
+        grid-gap: 0.2vh;
+    }
+    .headerblog{
+        background: white;
+    }
+    .comment{
+        padding: 1vh;
+        background: pink;
+    }
+    .footerblog{
+        text-align: center;
+        background: yellow;
+    }
+    #textcomment{
+        width: 100%;
+        height: 13vh;
+        font-size: 1.5vh;
+    }
+    #gobacktext{
+        color: red;
+        grid-column: span 2;
+    }
+    #posts{
+        background: green;
+        padding: 1vh;
+    }
+    .post{
+        display: grid;
+        grid-template-columns: 10vh 1fr;
+        grid-template-rows: 10vh 1fr;
+    }
+    .accimg{
+        background: white;
+    }
+    .info{
+        background: brown;
+    }
+    .textcontent{
+        grid-column: span 2;
+        background: blue;
+        padding: 1vh
+    }
+    .new{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 20vh 1fr;
+        grid-gap: 0.2vh;
+        background: pink;
+    }
+    .topic{
+        background: hotpink;
+    }
+    .news{
+        grid-column: span 2;
+    }
+    #profile-image{
+        width:20vh;
+        height:20vh;
+    }
+    .accimg{
+        background: white;
+        padding: 0.3vh;
+        width:9.35vh;
+        height:9.35vh;
+    }
+    
 }
 @media(max-width: 425px){
+    h1{
+        font-size: 6vw;
+    }
+    h2{
+        font-size: 5vw;
+    }
+    h3{
+        font-size: 4.5vw;
+    }
+    p{
+        font-size: 4.5vw;
+    }
     body{
         margin: 0 auto;
         background-image: url("img/black-background-star.jpg");
         background: black;
         background-repeat: repeat;
-        padding: 0.2vh;
+        padding: 0.2vw;
     }
     #menupage{
         display: grid;
         grid-template-columns: 0.8fr 2.2fr;
-        grid-template-rows: 20vh 1fr 6vh;
-        grid-gap: 0.2vh;
+        grid-template-rows: 20vw 1fr 14vw;
+        grid-gap: 0.2vw;
     }
     .header{
         grid-column: 1/ span 2;
@@ -74,12 +196,12 @@ a{
         text-align: center;
     }
     .menu{
-        padding: 0.5vh;
+        padding: 0.5vw;
         text-align: center;
         background: red;
     }
-    .content{
-        padding: 0.5vh;
+    #content{
+        padding: 0.5vw;
         background: pink;
     }
     .footer{
@@ -87,90 +209,110 @@ a{
         grid-column: 1/ span 2;
         background: yellow;
     }
-}
-button, input{
-    font-size: 1.6vh;
-    height: auto;
-}
-
-#firstpage{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 32vh 1fr;
-    text-align: center;
-    grid-gap: 0.2vh;
-}
-.imgfirstpage{
-    grid-column: 1/ span 2;
-    background: white;
-}
-.btfirstpage1{
-    background: red;
-}
-.btfirstpage2{
-    background: green;
-}
-
-
-#form{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 5vh;
-    grid-gap: 0.2vh;
-    background: brown;
-}
-.loginheader{
-    font-size: 4vh;
-    text-align: center;
-    padding: 1vh;
-    color: white;
-}
-.text{
-    grid-column: span 2;
-}
-#blogpage{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 20vh 6vh 1fr 25vh 6vh;
-    grid-gap: 0.2vh;
-}
-.headerblog{
-    background: white;
-}
-.comment{
-    padding: 1vh;
-    background: pink;
-}
-.footerblog{
-    text-align: center;
-    background: yellow;
-}
-#textcomment{
-    width: 100%;
-    height: 13vh;
-    font-size: 1.5vh;
-}
-#gobacktext{
-    color: red;
-    grid-column: span 2;
-}
-#posts{
-    background: green;
-    padding: 1vh;
-}
-.post{
-    display: grid;
-    grid-template-columns: 10vh 1fr;
-    grid-template-rows: 10vh 1fr;
-}
-.accimg{
-    background: white;
-}
-.info{
-    background: brown;
-}
-.textcontent{
-    grid-column: span 2;
-    background: blue;
-    padding: 1vh
+    button, input{
+        font-size: 4vw;
+        height: auto;
+    }
+    #firstpage{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 32vw 1fr;
+        text-align: center;
+        grid-gap: 0.2vw;
+    }
+    .imgfirstpage{
+        grid-column: 1/ span 2;
+        background: white;
+    }
+    .btfirstpage1{
+        background: red;
+    }
+    .btfirstpage2{
+        background: green;
+    }
+    #form{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 8vw;
+        grid-gap: 0.2vw;
+        background: brown;
+    }
+    .loginheader{
+        font-size: 9vw;
+        text-align: center;
+        padding: 1vw;
+        color: white;
+    }
+    .text{
+        grid-column: span 2;
+    }
+    #blogpage{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 20vw 14vw 1fr 60vw 14vw;
+        grid-gap: 0.2vw;
+    }
+    .headerblog{
+        background: white;
+    }
+    .comment{
+        padding: 1vw;
+        background: pink;
+    }
+    .footerblog{
+        text-align: center;
+        background: yellow;
+    }
+    #textcomment{
+        width: 100%;
+        height: 30vw;
+        font-size: 4vw;
+    }
+    #gobacktext{
+        color: red;
+        grid-column: span 2;
+    }
+    #posts{
+        background: green;
+        padding: 1vw;
+    }
+    .post{
+        display: grid;
+        grid-template-columns: 25vw 1fr;
+        grid-template-rows: 25vw 1fr;
+    }
+    .accimg{
+        background: white;
+    }
+    .info{
+        background: brown;
+    }
+    .textcontent{
+        grid-column: span 2;
+        background: blue;
+        padding: 1vw;
+    }
+    .new{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 20vw 1fr;
+        grid-gap: 0.2vw;
+        background: pink;
+    }
+    .topic{
+        background: hotpink;
+    }
+    .news{
+        grid-column: span 2;
+    }
+    #profile-image{
+        width:40vw;
+        height:40vw;
+    }
+    .accimg{
+        background: white;
+        padding: 1vw;
+        width:23vw;
+        height:23vw;
+    }
 }
